--- a/people.htm
+++ b/people.htm
@@ -290,6 +290,13 @@ Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University in China. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
 </p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/kevin_qiu.jpg" style="width:180px">
+<b>Kevin Qiu</b>
+<a href="mailto:qcx9hm@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Kevin is a medical student at UVA expected to graduate in 2026. He received his bachelor's from Northwestern University in 2021 and spent a year there developing skills in whole-genome, RNA, and epigenomic sequencing methods in the context of T cell lymphomas. His research interests lie in the use of high-throughput sequencing methods in the diagnosis, management, and development of treatments for of diseases in a clinical setting.
+</p><br><br>
 <hr>
 <h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
@@ -337,21 +344,36 @@ Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. Sh
 <b>Andy Cao</b>
 <a href="mailto:kcz3my@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Andy Cao is a Second Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
+Andy Cao is a Third Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
 </p><br><br><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/jingyi_wang.jpg" style="width:180px">
 <b>Jingyi Wang</b>
 <a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Jingyi Wang is a Second Year undergraduate student (Class of 2025) with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics after graduation.
+Jingyi Wang is a Third Year undergraduate student (Class of 2025) with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics after graduation.
 </p><br><br><br><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/nina_chinnam.jpg" style="width:180px">
 <b>Nina Chinnam</b>
 <a href="mailto:fhs9af@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Nina Chinnam is a Second Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
+Nina Chinnam is a Third Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
+</p><br><br><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/yanbin_xu.jpg" style="height:180px">
+<b>Yanbin Xu</b>
+<a href="mailto:xzy8wd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Yanbin Xu is a Third Year undergraduate student (Class of 2025) pursuing a double major in Neuroscience and Statistics. He is excited to develop and apply bioinformatics algorithms to study genomic problems and learn more about machine learning in precision medicine.
+</p><br><br><br>
+<h4><font color="#002F6C">Class of 2026</font></h4>
+<p style="line-height: 1.6;">
+<img align="right" src="images/grant_atwood.jpg" style="width:180px">
+<b>Grant Atwood</b>
+<a href="mailto:yha9cf@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Grant Atwood is a Second Year undergraduate student (Class of 2026) pursuing Biomedical Engineering with a minor in Computer Science. He hopes to utilize principles from a wide breadth of fields to further understand the human genome. In his free time, he enjoys watching sports of all varieties.
 </p><br><br><br><br><br>
 <!--<p style="line-height: 1.6;">
 <b>Jennifer Wu</b>
@@ -683,7 +705,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 1, 2023</p>
+<p align="right">Last modified: September 7, 2023</p>
 
 </div>
 
