--- a/publication.htm
+++ b/publication.htm
@@ -145,6 +145,11 @@ function myFunction() {
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.06.18.545510" target="_blank">https://doi.org/10.1101/2023.06.18.545510</a> (2023)
 </p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2023.09.13.557622v1" target="_blank">Proximal immune-epithelial progenitor interactions drive chronic tissue sequelae post COVID-19</a><br>
+Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Patcharin Pramoonjago, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.09.13.557622" target="_blank">https://doi.org/10.1101/2023.09.13.557622</a> (2023)
+</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2022.10.24.513520v2" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
 Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
 <br>
@@ -445,7 +450,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 1, 2023</p>
+<p align="right">Last modified: September 20, 2023</p>
 </div>
 
 <script>
