--- a/research.htm
+++ b/research.htm
@@ -185,6 +185,14 @@ Data-driven discovery has become a new paradigm of biological research. By model
 </p>
 <br><br>
 <hr>
+<h3><font color="#002F6C">Research Talks</font></h3>
+<p style="line-height: 1.6;">
+		<iframe width="440" height="248" src="https://www.youtube.com/embed/fTfXJSHM2Ao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		&nbsp;&nbsp;
+		<iframe width="440" height="248" src="https://www.youtube.com/embed/uOaXp-q3z0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</p>
+<br>
+<hr>
 <h3><font color="#002F6C">Collaborations</font></h3>
 <p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaboration between researchers with different backgrounds and expertises. We always commit to collaborations and team science with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists. We study functional epigenetics and transcriptional regulation in a variety of biological systems and human diseases, including T-cell immunity, malignant peripheral nerve sheath tumor (MPNST), acute myeloid leukemia (AML), T-cell acute lymphoblastic leukemia (T-ALL), colorectal cancer, coronary artery disease, development, and environmental health, etc.</p>
 <p style="line-height: 1.6;">Our collaborators include:
@@ -257,7 +265,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 </div>
 </div>
 <hr>
-<p align="right">Last modified: January 30, 2023</p>
+<p align="right">Last modified: October 16, 2023</p>
 
 </div>
 
