--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">October 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Zhaoxia gives an oral presentation at the annual BMG departmental retreat. Way to go!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">August 2023</font>
 		</p>
 	</div>
@@ -968,7 +980,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 1, 2023</p>
+<p align="right">Last modified: October 16, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
