--- a/publication.htm
+++ b/publication.htm
@@ -168,7 +168,7 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC binding sites in human cells reveals a lack of overlap between them</a><br>
 <u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
-<b>eLife</b>, doi: <a href="https://doi.org/10.7554/eLife.89548.1" target="_blank">https://doi.org/10.7554/eLife.89548.1</a> (2023)
+<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548.1" target="_blank">https://doi.org/10.7554/eLife.89548.1</a> (2023)
 </p></li>
 <li><p><a href="https://www.cell.com/iscience/fulltext/S2589-0042(23)01274-9" target="_blank">Single cell RNA sequencing unravels mechanisms underlying senescence-like phenotypes of alveolar macrophages</a><br>
 Yue Wu, <u>Shengen Shawn Hu</u>, Ruixuan Zhang, Nick P. Goplen, Xiaochen Gao, Harish Narasimhan, Ao Shi, Yin Chen, Ying Li, <u>Chongzhi Zang</u>, Haidong Dong, Thomas J. Braciale, Bibo Zhu, Jie Sun
