--- a/publication.htm
+++ b/publication.htm
@@ -145,15 +145,15 @@ function myFunction() {
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.06.18.545510" target="_blank">https://doi.org/10.1101/2023.06.18.545510</a> (2023)
 </p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2023.01.31.525983v2" target="_blank">Perturb-tracing enables high-content screening of multiscale 3D genome regulators</a><br>
+Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u>Zhaoxia Ma</u>, Jonathan S. D. Radda, Shengyan Jin, <u>Chongzhi Zang</u>, Siyuan Wang
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.01.31.525983" target="_blank">https://doi.org/10.1101/2023.01.31.525983</a> (2023)
+</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2023.09.13.557622v1" target="_blank">Proximal immune-epithelial progenitor interactions drive chronic tissue sequelae post COVID-19</a><br>
 Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Patcharin Pramoonjago, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.09.13.557622" target="_blank">https://doi.org/10.1101/2023.09.13.557622</a> (2023)
-</p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.10.24.513520v2" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
-Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
-<br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2022.10.24.513520" target="_blank">https://doi.org/10.1101/2022.10.24.513520</a> (2022)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2022.09.21.508770v2" target="_blank">Temporal dynamics of the multi-omic response to endurance exercise training across tissues</a><br>
 MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
@@ -165,6 +165,11 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
+Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Astrid Catalina Alvarez-Yela, Yipei Song, Qi Cheng, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, P. Todd Stukenberg, Aloke V. Finn, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
+<br>
+<i><b>Cell Reports</b></i>, doi: <a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">https://doi.org/10.1016/j.celrep.2023.113380</a> (2023)
+</p></li>
 <li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC binding sites in human cells reveals a lack of overlap between them</a><br>
 <u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
@@ -330,7 +335,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="35">
+<ol style="padding-left: 24px; line-height: 1.6;" start="36">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -450,7 +455,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 20, 2023</p>
+<p align="right">Last modified: November 18, 2023</p>
 </div>
 
 <script>
