--- a/index.htm
+++ b/index.htm
@@ -164,11 +164,25 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">November 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		The lab receives a second pilot funding award from the UVA Cancer Center's Molecular Genetics and Epigenetics (GEN) program!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">October 2023</font>
 		</p>
 	</div>
 	<div class="column right">
 		<p>
+		Chongzhi gives a talk at <a href="https://www.csh-asia.org/?content/332" target="_blank">Cold Spring Harbor Asia Meeting on Systems Biology of Gene Regulation and Genome Editing</a> in Suzhou, China.
+		<br><br>
 		Zhaoxia gives an oral presentation at the annual BMG departmental retreat. Way to go!
 		</p>
 	</div>
@@ -980,7 +994,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: October 16, 2023</p>
+<p align="right">Last modified: November 20, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
