--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		The School of Medicine celebrates BIMS students for advancement to PhD candidacy. Congratulations to 3 Zang lab members, Zhaoxia, Mengxue, and Hongpan, on this milestone! See news and pictures <a href="https://news.med.virginia.edu/education/biomedical-sciences-hosts-advancement-to-candidacy-celebration-for-third-year-phd-students/" target="_blank">here</a>.
+		<br><br>
 		The lab receives a second pilot funding award from the UVA Cancer Center's Molecular Genetics and Epigenetics (GEN) program!
 		</p>
 	</div>
