--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">December 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Kudos to Mengxue, Zhaoxia, and Shawn for giving oral presentations, and to Hongpan and Shengyuan for presenting posters at the Commonwealth of Virginia Cancer Research Conference (CVCRC). Congratulations to Zhaoxia for winning a Best Speaker Award! Way to go everyone!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">November 2023</font>
 		</p>
 	</div>
@@ -996,7 +1008,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: November 20, 2023</p>
+<p align="right">Last modified: December 2, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
