--- a/publication.htm
+++ b/publication.htm
@@ -165,15 +165,15 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC/MCM binding sites in human cells reveals a lack of overlap</a><br>
+<u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
+<br>
+<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548" target="_blank">https://doi.org/10.7554/eLife.89548</a> (2023)
+</p></li>
 <li><p><a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
 Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Astrid Catalina Alvarez-Yela, Yipei Song, Qi Cheng, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, P. Todd Stukenberg, Aloke V. Finn, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
 <br>
 <i><b>Cell Reports</b></i>, doi: <a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">https://doi.org/10.1016/j.celrep.2023.113380</a> (2023)
-</p></li>
-<li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC binding sites in human cells reveals a lack of overlap between them</a><br>
-<u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
-<br>
-<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548.1" target="_blank">https://doi.org/10.7554/eLife.89548.1</a> (2023)
 </p></li>
 <li><p><a href="https://www.cell.com/iscience/fulltext/S2589-0042(23)01274-9" target="_blank">Single cell RNA sequencing unravels mechanisms underlying senescence-like phenotypes of alveolar macrophages</a><br>
 Yue Wu, <u>Shengen Shawn Hu</u>, Ruixuan Zhang, Nick P. Goplen, Xiaochen Gao, Harish Narasimhan, Ao Shi, Yin Chen, Ying Li, <u>Chongzhi Zang</u>, Haidong Dong, Thomas J. Braciale, Bibo Zhu, Jie Sun
@@ -455,7 +455,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: November 18, 2023</p>
+<p align="right">Last modified: December 20, 2023</p>
 </div>
 
 <script>
