--- a/publication.htm
+++ b/publication.htm
@@ -173,12 +173,12 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <li><p><a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
 Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Astrid Catalina Alvarez-Yela, Yipei Song, Qi Cheng, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, P. Todd Stukenberg, Aloke V. Finn, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
 <br>
-<i><b>Cell Reports</b></i>, doi: <a href="https://doi.org/10.1016/j.celrep.2023.113380" target="_blank">https://doi.org/10.1016/j.celrep.2023.113380</a> (2023)
+<i><b>Cell Reports</b></i> 42, 113380 (2023)
 </p></li>
 <li><p><a href="https://www.cell.com/iscience/fulltext/S2589-0042(23)01274-9" target="_blank">Single cell RNA sequencing unravels mechanisms underlying senescence-like phenotypes of alveolar macrophages</a><br>
 Yue Wu, <u>Shengen Shawn Hu</u>, Ruixuan Zhang, Nick P. Goplen, Xiaochen Gao, Harish Narasimhan, Ao Shi, Yin Chen, Ying Li, <u>Chongzhi Zang</u>, Haidong Dong, Thomas J. Braciale, Bibo Zhu, Jie Sun
 <br>
-<i><b>iScience</b></i>  26, 107197 (2023)
+<i><b>iScience</b></i> 26, 107197 (2023)
 </p></li>
 <li><p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010705" target="_blank">Fob1-dependent condensin recruitment and loop extrusion on yeast chromosome III</a><br>
 Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Mingguang Li, Jeffrey S. Smith
