--- a/publication.htm
+++ b/publication.htm
@@ -165,6 +165,11 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41590-023-01720-w" target="_blank">The transcriptional cofactor Tle3 reciprocally controls effector and central memory CD8<sup>+</sup> T cell fates</a><br> 
+Xin Zhao, Wei Hu, Sung Rye Park, Shaoqi Zhu, <u>Shengen Shawn Hu</u>, <u>Chongzhi Zang</u>, Weiqun Peng, Qiang Shan<sup>#</sup>, Hai-Hui Xue<sup>#</sup>
+<br>
+<i><b>Nature Immunology</b></i>, doi: <a href="https://doi.org/10.1038/s41590-023-01720-w" target="_blank">https://doi.org/10.1038/s41590-023-01720-w</a> (2024)
+</p></li>
 <li><p><a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank">Integrative analysis of DNA replication origins and ORC/MCM binding sites in human cells reveals a lack of overlap</a><br>
 <u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
@@ -335,7 +340,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="36">
+<ol style="padding-left: 24px; line-height: 1.6;" start="37">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -455,7 +460,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: December 20, 2023</p>
+<p align="right">Last modified: January 18, 2024</p>
 </div>
 
 <script>
