--- a/people.htm
+++ b/people.htm
@@ -229,14 +229,14 @@ Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><
 Dr. Chongzhi Zang is an Associate Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA since November 2016. He is also a faculty member of the UVA Comprehensive Cancer Center. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA, he completed his postdoctoral training with <a href="https://liulab-dfci.github.io/" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on algorithm development for high-throughput genomic data analysis and integrative modeling of gene regulatory networks in mammalian cell systems.
 </p><br>
 <hr>
-<h3><font color="#002F6C">Research Scientists</font></h3>
-<p style="line-height: 1.6;">
+<h3><font color="#002F6C">Research Scientist</font></h3>
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/zhenjia_wang.jpg" style="width:180px">
 <b>Zhenjia Wang, PhD</b>
 <a href="mailto:zhenjia@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=-mxk13sAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhenjia joined the lab as a postdoctoral research associate in January 2017 and has been a research scientist since June 2021. She received her PhD in bioinformatics from School of Mathematics, Shandong University in China. She is working on integration of publicly available transcription factor ChIP-seq data for studying functional gene regulation, and integration of RNA-seq data with ChIP-seq data for studying epigenetic mechanisms of cancer.
-</p><br><br>
+</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b>
@@ -260,13 +260,13 @@ Qingying Chen joined the lab as a postdoctoral research associate in January 202
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
 </p><br><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/kyubin_lee.jpg" style="width:180px">
 <b>Kyubin Lee, PhD</b>
 <a href="mailto:xdz2gw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=Kq937DsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Kyubin Lee joined the lab as a postdoctoral research associate in October 2022. He received his Ph.D. in Computer Science and B.S. in Mathematics from the University of Wisconsin-Madison. His Ph.D. research with Mark Craven focused on developing explainable machine learning (ML) methods with applications to mapping viral genotypes to host disease phenotypes. He also worked on developing computational methods for cancer genomics research at National Cancer Center in South Korea as part of his military service. Co-mentored by Drs. Yuh-Hwa Wang and Francine Garrett-Bakelman at the Department of Biochemistry and Molecular Genetics, he is interested in applying integrative ML methods to address various challenges to understand human biology. Outside of research, he enjoys having time with his family.
-</p><br><br>
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
@@ -298,39 +298,24 @@ Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She recei
 Kevin is a medical student at UVA expected to graduate in 2026. He received his bachelor's from Northwestern University in 2021 and spent a year there developing skills in whole-genome, RNA, and epigenomic sequencing methods in the context of T cell lymphomas. His research interests lie in the use of high-throughput sequencing methods in the diagnosis, management, and development of treatments for of diseases in a clinical setting.
 </p><br><br>
 <hr>
-<h3><font color="#002F6C">Research Assistants</font></h3>
+<h3><font color="#002F6C">Research Assistant</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shiyu_jiang.jpg" style="width:180px">
 <a href="https://jasonjiangs.github.io/" target="_blank"><b>Shiyu Jiang</b></a>
 <a href="mailto:sjiang43@jhu.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=DBJYZiYAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Shiyu Jiang joined the lab as a volunteer in January 2023 and became research assistant in July 2023. He currently is a master’s student in Computer Science at Johns Hopkins University and previously received B.S. in Computer Science from Wenzhou-Kean University in China. His research interests lie in developing algorithms and tools to solve biological problems. In his free time, he likes to play soccer and spend some time at the gym.
+Shiyu Jiang joined the lab as a volunteer in January 2023 and became research assistant in July 2023. He received his master’s degree in Computer Science at Johns Hopkins University in December 2023 and previously received B.S. in Computer Science from Wenzhou-Kean University in China. His research interests lie in developing algorithms and tools to solve biological problems. In his free time, he likes to play soccer and spend some time at the gym.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
-<b>Andrew Vanichkachorn</b>
-<a href="mailto:acv3by@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Drew Vanichkachorn is a graduate student in the Master of Public Health (MPH) program. He joined the lab in 2019 as a 3rd Year undergraduate student majoring in Global Public Health. Drew is excited to be learning about genomics and believes this field to be important in the future of medicine. He is also interested in music and enjoys playing the piano and viola when he can.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/ben_ke.jpg" style="width:180px">
-<b>Benjamin Ke</b>
-<a href="mailto:bgk5ck@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Ben Ke graduated from UVA in 2022 majored in Biostatistics and will matriculate at the MD program at UVA School of Medicine. He works in the lab since his First Year at UVA and continues in the summer after graduation. He works on using data science approaches to unravel the mystery underlying physical activities (as part of the MoTrPAC consortium). He also volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time.
-</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<!--
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
-<img align="right" src="images/caitlin_mcintyre.jpg" style="width:180px">
-<b>Caitlin McIntyre</b>
-<a href="mailto:cam3zw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<img align="right" src="images/jingyi_wang.jpg" style="width:180px">
+<b>Jingyi Wang</b>
+<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area majoring in global public health or biology on a pre-health track. She is fascinated by the interdisciplinary nature of genomics research and harnessing this work to discover more about gene expression and human diseases. In her free time, she enjoys volunteering through Madison House, spending time with friends and listening to music.
-</p><br><br>-->
+Jingyi Wang is a Third Year undergraduate student with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics and computational biology after graduation.
+</p><br><br><br><br>
 <h4><font color="#002F6C">Class of 2025</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ivory_tang.jpg" style="width:180px">
@@ -346,13 +331,6 @@ Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. Sh
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Andy Cao is a Third Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
 </p><br><br><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/jingyi_wang.jpg" style="width:180px">
-<b>Jingyi Wang</b>
-<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Jingyi Wang is a Third Year undergraduate student (Class of 2025) with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics after graduation.
-</p><br><br><br><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/nina_chinnam.jpg" style="width:180px">
 <b>Nina Chinnam</b>
@@ -374,6 +352,14 @@ Yanbin Xu is a Third Year undergraduate student (Class of 2025) pursuing a doubl
 <a href="mailto:yha9cf@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Grant Atwood is a Second Year undergraduate student (Class of 2026) pursuing Biomedical Engineering with a minor in Computer Science. He hopes to utilize principles from a wide breadth of fields to further understand the human genome. In his free time, he enjoys watching sports of all varieties.
+</p><br><br><br>
+<h4><font color="#002F6C">Class of 2027</font></h4>
+<p style="line-height: 1.6;">
+<img align="right" src="images/emily_nguyen.jpg" style="width:180px">
+<b>Emily Nguyen</b>
+<a href="mailto:zng3sw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Emily Nguyen is a First Year undergraduate student (Class of 2027) hoping to major in biochemistry on a pre-med track. I'm excited to apply my background in math to my career in science and learn how to interpret datasets into biomedical information.
 </p><br><br><br><br><br>
 <!--<p style="line-height: 1.6;">
 <b>Jennifer Wu</b>
@@ -427,7 +413,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 	<tr>
 		<td><b>Christopher Dampier, MD</b></td>
 		<td>MD, University of Michigan;<br>General Surgery Residency, University of Virginia</td>
-		<td>07/2019&ndash;05/2021</td>
+		<td>07/2019&ndash;06/2021</td>
 		<td>Pathology Fellow, National Cancer Institute, NIH</td>
 	</tr>
 	<tr>
@@ -435,6 +421,12 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td>PhD in Computational Sciences and Informatics, George Mason University</td>
 		<td>01/2021&ndash;08/2022</td>
 		<td>Data Scientist, Google</td>
+	</tr>
+	<tr>
+		<td><b>Zhenjia Wang, PhD</b></td>
+		<td>PhD in Bioinformatics, Shandong University</td>
+		<td>01/2017&ndash;01/2024</td>
+		<td>Scientist, Foundation Medicine</td>
 	</tr>
 </table>
 <br>
@@ -705,7 +697,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: September 7, 2023</p>
+<p align="right">Last modified: January 30, 2024</p>
 
 </div>
 
