--- a/teaching.htm
+++ b/teaching.htm
@@ -103,6 +103,12 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
+<h3><font color="#002F6C">BIMS 8701/8702: Computational Biology I/II</font></h3>
+<p style="line-height: 1.6;">
+Spring 2024: Coming soon
+<!--<a href="https://cphg.github.io/compgen/" target="_blank">Spring 2024: Course website</a>-->
+</p>
+<hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
 <p style="line-height: 1.6;">
 	Fall 2023 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="slides/data_visualization_2023.pdf" target="_blank">[Slides]</a>
@@ -177,7 +183,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: August 22, 2023</p>
+<p align="right">Last modified: January 30, 2024</p>
 </div>
 
 </body></html>
